--- a/python_example/OGTutBot.cfg
+++ b/python_example/OGTutBot.cfg
@@ -1,9 +1,11 @@
 [Locations]
-# Path to loadout config. Can use relative path from here.
+# Path to loadout config from runner
 looks_config = ./appearance.cfg
-
-# Path to python file. Can use relative path from here.
-python_file = ./OGTutBot.py
-
-# Name of the bot in-game
+# Bot's python file.
+# Only need this if RLBot controlled
+python_file = F:\Documents\RLBot\RLBot\python_example\OGTutBot.py
+# The name that will be displayed in game
 name = OGTutBot
+
+[Bot Parameters]
+
